--- a/index.html
+++ b/index.html
@@ -26,25 +26,21 @@
                     <li class="slide-one">
                         <h4 class="title">Slide One</h4>
                         <div class="content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            Tab One - Slide One
                         </div>
                     </li>
 
                     <li class="slide-two">
                         <h4 class="title">Slide Two</h4>
                         <div class="content">
-                            Content for slide two is rendered from here.
+                            Tab One - Slide Two
                         </div>
                     </li>
 
                     <li class="slide-three">
                         <h4 class="title">Slide Three</h4>
                         <div class="content">
-                            Content for slide three is rendered from here.
+                            Tab One - Slide Three
                         </div>
                     </li>
                 </ul>
@@ -57,25 +53,21 @@
                     <li class="slide-one">
                         <h4 class="title">Slide One</h4>
                         <div class="content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            Tab Two - Slide One
                         </div>
                     </li>
 
                     <li class="slide-two">
                         <h4 class="title">Slide Two</h4>
                         <div class="content">
-                            Content for slide two is rendered from here.
+                            Tab Two - Slide Two
                         </div>
                     </li>
 
                     <li class="slide-three">
                         <h4 class="title">Slide Three</h4>
                         <div class="content">
-                            Content for slide three is rendered from here.
+                            Tab Two - Slide Three
                         </div>
                     </li>
                 </ul>
@@ -87,25 +79,21 @@
                     <li class="slide-one">
                         <h4 class="title">Slide One</h4>
                         <div class="content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            Tab Three - Slide One
                         </div>
                     </li>
 
                     <li class="slide-two">
                         <h4 class="title">Slide Two</h4>
                         <div class="content">
-                            Content for slide two is rendered from here.
+                            Tab Three - Slide Two
                         </div>
                     </li>
 
                     <li class="slide-three">
                         <h4 class="title">Slide Three</h4>
                         <div class="content">
-                            Content for slide three is rendered from here.
+                            Tab Three - Slide Three
                         </div>
                     </li>
                 </ul>
